Update API endpoints to send `auth_method` data
